--- a/grid2.css
+++ b/grid2.css
@@ -55,25 +55,32 @@ body {
 
 .box5 > ul > li {
   list-style: none;
+  font-size: 1.2rem;
 }
 
 .box5 > ul > li:nth-child(1),
 .box5 > ul > li:nth-child(2) {
   text-align: left;
+  margin-left: -18px;
+  margin-top: 15px;
 }
 
-.box5 > ul > li:nth-child(3),
 .box5 > ul > li:nth-child(4) {
   border-radius: 30px;
   border: 2px solid white;
-  padding: 5px 10px;
-  margin-right: 30px;
+  padding: 8px 10px 5px 8px;
+  margin-top: 14px;
+  margin-right: 11%;
 }
 
 .box5 > ul > li:nth-child(3) {
+  border-radius: 30px;
   color: green;
   border: 2px solid green;
+  padding: 9px 10px 5px 10px;
   margin-left: auto;
+  margin-top: 14px;
+  margin-right: -30px;
 }
 
 .box2 {
