--- a/grid2.css
+++ b/grid2.css
@@ -10,25 +10,35 @@ body {
   min-height: 1583px;
   font-size: 2rem;
   opacity: 0.5;
-  color: blue;
 }
 
 .container {
   display: grid;
-  grid-template-rows:
-    minmax(100px, auto) minmax(513px, auto) minmax(384px, auto)
-    minmax(573px, auto); /* Make rows responsive */
+  grid-template-columns:
+    minmax(200px, 1fr) minmax(233px, 1fr) minmax(663px, 1fr)
+    minmax(439px, 1fr);
+  grid-template-rows: 100px 512px 385px 573px;
+  grid-template-areas:
+    "box1 box5 box5 box5"
+    "box2 box2 box2 box2"
+    "box3 box3 box3 box3"
+    "box4 box4 box6 box7";
+  max-width: 1143px;
+  min-height: 1583px;
+  font-size: 2rem;
+}
+
+.container > * {
+  border: 2px dashed blue;
 }
 
 .box1 {
-  grid-column: 1;
-  border-right: 2px dashed blue; /* Add vertical border */
+  grid-area: box1;
 }
 
 .box5 {
-  grid-column: 2;
+  grid-area: box5;
   background-color: rgba(0, 0, 0, 0.4);
-  border-left: 2px dashed blue; /* Add vertical border */
 }
 
 .box5 > ul {
@@ -71,98 +81,73 @@ body {
 }
 
 .box2 {
-  grid-row: 2;
-  border-top: 2px dashed blue;
-  border-bottom: 2px dashed blue;
+  grid-area: box2;
 }
 
 .box3 {
-  grid-row: 3;
-  border-top: 2px dashed blue;
-  border-bottom: 2px dashed blue;
+  grid-area: box3;
 }
 
 .box4 {
-  grid-column: 1 / 2;
-  border-right: 2px dashed blue;
+  grid-area: box4;
 }
 
 .box6 {
-  grid-column: 2 / 3;
-  border-left: 2px dashed blue;
-  border-right: 2px dashed blue;
+  grid-area: box6;
 }
 
 .box7 {
-  grid-column: 3 / 4;
-  border-left: 2px dashed blue;
+  grid-area: box7;
 }
 
-.container > * {
-  border-top: 2px dashed blue;
-  border-bottom: 2px dashed blue;
-  border-right: 2px dashed blue;
-  border-left: 2px dashed blue;
-}
-
-/* Media Query for when the browser width is 500px or less */
-@media (max-width: 500px) {
+/* Media Queries to ensure responsiveness */
+@media (max-width: 1200px) {
   .container {
-    grid-template-rows: repeat(
-      8,
-      minmax(100px, auto)
-    ); /* Adjust for stacking layout */
+    grid-template-columns: repeat(4, minmax(50px, 1fr));
+    grid-template-rows: repeat(4, minmax(50px, 1fr));
   }
+}
 
-
-
-  .box1 {
-    grid-column: 1;
-    grid-row: 1; /* Place .box1 in the first row */
-    border-right: none;
-    border-bottom: 2px dashed blue; /* Add bottom border */
-  }
-
-  .box5 {
-    grid-column: 1;
-    grid-row: 2; /* Place .box5 in the second row */
-    border-left: none;
-  }
-
-  .row4 {
-    grid-template-columns: 1fr; /* Make row4 a single column */
-    grid-template-rows: auto auto auto; /* Stack the boxes */
-  }
-
-  .box4 {
-    grid-row: 1;
-  }
-
-  .box6 {
-    grid-column: 1;
-    grid-row: 2; /* Stack .box6 below .box4 */
-    border-left: none;
-    border-right: none;
-    border-top: 2px dashed blue; /* Add top border for separation */
-  }
-
-  .box7 {
-    grid-column: 1;
-    grid-row: 3; /* Stack .box7 below .box6 */
-    border-left: none;
-    border-right: none;
-    border-top: 2px dashed blue; /* Add top border for separation */
+@media (max-width: 800px) {
+  .container {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+    grid-template-rows: repeat(4, minmax(100px, 1fr));
+    grid-template-areas:
+      "box1 box5"
+      "box2 box2"
+      "box3 box3"
+      "box4 box6"
+      "box7 box7";
   }
 
   .box5 > ul {
-    flex-direction: column; /* Stack list items vertically */
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    justify-content: center;
+    gap: 0.5rem;
   }
 
-  .box5 > ul > li:nth-child(3),
   .box5 > ul > li:nth-child(4) {
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%; /* Take full width */
+    margin: 0;
+  }
+  .box5 > ul > li:nth-child(3) {
+    margin: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    grid-template-columns: repeat(1, minmax(100px, 1fr));
+    grid-template-rows: repeat(7, minmax(100px, 1fr));
+    grid-template-areas:
+      "box1"
+      "box5"
+      "box2"
+      "box3"
+      "box4"
+      "box6"
+      "box7";
   }
 }
