--- a/grid3.css
+++ b/grid3.css
@@ -13,15 +13,16 @@ body {
   background-image: none;
   max-width: 1538px;
   min-height: 1583px;
+  background-size: cover;
   font-size: 2rem;
   opacity: 1;
 }
 
 .container {
   display: grid;
-  grid-template-columns:
-    minmax(200px, 1fr) minmax(232px, 1fr) minmax(663px, 1fr)
-    minmax(439px, 1fr);
+  width: 100%;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, minmax(100px, 1fr));
   grid-template-rows: 100px 512px 385px 573px;
   grid-template-areas:
     "box1 box2 box2 box2"
@@ -29,6 +30,15 @@ body {
     "box3 box3 box3 box3"
     "box4 box4 box6 box7";
 }
+
+@media (min-width: 1540px) {
+  .container {
+    max-width: 1540px;
+    margin: 0 auto;
+    grid-template-columns: 200px 232px 663px 439px;
+  }
+}
+
 
 .container > * {
   border: 2px dashed blue;
